@@ -12,6 +12,7 @@ test.pl
 text_action.txt
 text_backslash.txt
 text_elsif.txt
+text_eval_include.txt
 text_shell.txt
 text_in.txt
 text_in2.txt
@@ -20,3 +21,4 @@ test1_1.var
 vpp
 vpp_test
 
+META.yml                                 Module meta-data (added by MakeMaker)
